--- a/css/landing-section.css
+++ b/css/landing-section.css
@@ -6,6 +6,22 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  filter: grayscale(20%);
+}
+
+.landing-button {
+  height: 50px;
+  width: 200px;
+  transition: background-color .6s;
+  margin-top: 18px;
+}
+.plain:link {
+  text-decoration: none;
+}
+.landing-button:hover {
+  background-color: white!important;
+  color: black;
+  text-decoration: none;
 }
 
 #landing-section .textarea p {
